# QtHttpRESTServer

./: CMakeLists.txt  RESTServer.cpp  RESTServer.h  RESTServer.kdev4  main.cpp  restconnection.cpp  restconnection.h  restserver.cpp  serverrequest.cpp  serverrequest.h
cert/: server.crt  server.key
